style.css
/* ... */
/*=============== BASE ===============*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--first-color);
  color: white;
  font-family: 'Trispace', sans-serif;
  width: 100vw;
  height: 100vh;
  overflow-y: scroll;
  z-index: 1;
}

#over_mij,
#mijn_ervaring,
#projecten {
  display: flex;
  justify-content: center;
  align-items: center;
}

h1,
h2,
h3 {
  font-weight: var(--title-bold);
}

p {
  font-size: var(--small-font-size);
  font-weight: var(--title-light);
  line-height: 1.8rem;
}

a {
  text-decoration: none;
  color: var(--fourth-color);
}

ul {
  list-style: none;
}

.button {
  cursor: pointer;
  font-family: 'Trispace', sans-serif;
  font-weight: var(--title-bold);
  font-size: 1rem;
  border: 2px solid var(--fifth-color);
  color: var(--fifth-color);
  border-radius: 5px;
  padding: 0.8em 1.5em;
  background-color: var(--first-color);
}

.button:hover {
  background-color: var(--fifth-color);
  color: var(--first-color);
  transition: 1s;
}

/*=============== REUSABLE CSS CLASSES ===============*/

/*=============== BODY ===============*/
section:first-of-type {
  padding-top: 100px;
}

/*=============== HEADER & NAV ===============*/
#mobile_menu {
  display: none;
  position: fixed;
  z-index: 150;
  width: 100vw;
  height: 100vh;
  background-color: rgb(17, 22, 46);
}

#mobile_menu ul {
  line-height: 5rem;
  text-decoration: none;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: calc(100vh - 128px);
}

#mobile_menu .bx-x {
  color: var(--fourth-color);
  font-size: 3rem;
  padding: 0.5rem;
  margin-left: calc(100% - 64px);
}

header {
  position: fixed;
  background-color: var(--first-color);
  width: 100%;
  height: 100px;
  z-index: var(--z-fixed);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header nav {
  display: flex;
  align-items: center;
}

header ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header li a {
  display: inline;
  font-weight: var(--title-bold);
  margin-right: 1.5rem;
  font-size: 1rem;
}

.bx-menu::before {
  display: none;
}

header .button {
  font-size: 1rem;
}

header li a:hover {
  color: var(--fifth-color) !important;
}

header h1 {
  margin: 0px 50px;
  font-size: 1.6rem;
}

@media screen and (max-width: 410px) {
  header nav {
    margin-right: 15px;
  }
  header h1 {
    margin: 0px 25px;
  }
}

@media screen and (max-width: 890px) {
  #navigation {
    display: none;
  }
  .bx-menu::before {
    display: block;
    font-size: 3rem;
  }

  header nav {
    margin-right: 20px;
  }
}

@media screen and (max-width: 1045px) {
  header li a {
    font-size: 0.8rem;
  }
  header .button {
    font-size: 0.8rem;
  }
}

@media screen and (min-width: 2000px) {
  header,
  section {
    width: 80%;
    margin: auto;
  }
  header {
    margin: 0rem 10%;
  }
}

/*=============== Homepage ===============*/

#homepage {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: flex-start;
  padding-left: 150px;
}

#homepage_wrapper {
  transform: translateY(-100vh);
  opacity: 0;
  transition: 2s;
}

#homepage h3 {
  font-weight: var(--font-medium);
  font-size: max(1rem, 3vw);
  margin-bottom: 2vw;
}

#homepage h1 {
  background-color: var(--fifth-color);
  color: var(--first-color);
  font-size: max(1.5rem, 5vw);
  padding: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-weight: var(--title-bold);
  margin-bottom: 2vw;
}

#homepage h2 {
  font-weight: var(--title-light);
  font-size: max(0.8rem, 1.5vw);
  width: 80%;
  line-height: max(1.2rem);
}

#scroll_icon {
  width: 1.8rem;
  margin: 5rem 0rem 0rem calc(100% - 7%);
}

@media screen and (max-width: 900px) {
  #homepage {
    padding-left: 50px;
  }
}
@media screen and (max-width: 600px) {
  #scroll_icon {
    margin-left: calc(100% - 15%);
  }
}
@media screen and (max-width: 410px) {
  #homepage {
    padding-left: 25px;
  }
  #homepage h2 {
    padding-bottom: 20px;
  }
}
@media screen and (min-width: 2000px) {
  #homepage {
    padding-left: calc(10% + 50px);
  }
}

/*=============== Over mij ===============*/
#over_mij {
  padding: 7rem 0rem;
}

#over_mij_wrapper {
  transform: translateX(-100vh);
  opacity: 0;
  transition: 2s;
}

#over_mij h1 {
  margin-bottom: 2rem;
  font-size: var(--h1-font-size);
  margin-left: 1.2rem;
}

#over_mij_wrapper {
  width: 800px;
}

.over_mij_container {
  display: flex;
  height: 340px;
}

.over_mij_container #menu {
  font-weight: var(--title-bold);
  border-left: 2px solid var(--second-color);
  font-size: var(--normal-font-size);
  flex: 3;
}

#mobile_menu_over_mij {
  display: none;
}

.over_mij_container #menu li {
  padding-top: 0.7rem;
  padding-bottom: 0.7rem;
  padding-left: 20px;
  line-height: 1.7rem;
  transform: translate(2px);
}

.over_mij_container #menu .menu_title_active1 {
  border-left: 6px solid var(--fifth-color);
  transform: translate(-4px);
}

.over_mij_container #menu li:hover {
  color: var(--fifth-color);
  cursor: pointer;
}

/* intro content */
#intro_content,
#opleidingen_hobbies_content {
  flex: 8;
}

#intro_content p:first-of-type {
  margin-bottom: 1.5rem;
  font-weight: var(--title-normal);
}

/*opleidingen en hobbies*/
#opleidingen_hobbies_content {
  display: none;
  gap: 5rem;
}

#opleidingen_hobbies_content h3 {
  margin-bottom: 1.5rem;
}

.opleidingen {
  flex: 4;
}

.hobbies {
  flex: 2;
}

#opleidingen_hobbies_content div {
  flex: 1;
}

#opleidingen_hobbies_content li {
  display: flex;
}
.opleidingen li {
  align-items: center;
  gap: 1rem;
  margin-bottom: 1.5rem;
}

#opleidingen_hobbies_content p {
  font-family: 'Trispace', sans-serif;
  font-size: var(--small-font-size);
  font-weight: var(--title-light);
}

.opleidingen .icon {
  font-size: 2rem;
  transform: translate(-0.5rem);
}
/* ... */

